# interactEM

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  authoring-operators.html  docker-compose.cache.yml  docker-compose.operator.yml  docker-compose.override.yml  docker-compose.yml  faststream-refactor-plan.md  genindex.html  getting-started.html  index.html  interactEM.code-workspace  introduction.html  launch-agent.html  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js
backend/agent/: .env  .env.example  Dockerfile  README.md  pyproject.toml  run.py
backend/agent/agent/: agent.py  config.py
backend/agent/interactem/agent/: _vector_template.py  agent.py  broker.py  config.py  deployment.py  deployment_manager.py  entrypoint.py  util.py
backend/app/: Dockerfile  alembic.ini  main.py  models.py  prestart.sh  pyproject.toml
backend/app/api/: main.py
backend/app/app/: main.py  models.py
backend/app/app/api/: deps.py  main.py
backend/app/app/core/: config.py
backend/app/app/events/: producer.py
backend/app/app/tests/: conftest.py
backend/app/core/: config.py
backend/app/interactem/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/core/: Dockerfile  pyproject.toml
backend/core/core/: config.py  constants.py  fixtures.py  logger.py  pipeline.py
backend/core/core/constants/: __init__.py  mounts.py
backend/core/core/events/: pipelines.py
backend/core/core/models/: __init__.py  agent.py  messages.py  operators.py  pipeline.py  ports.py  uri.py
backend/core/core/nats/: __init__.py  config.py  consumers.py
backend/core/interactem/core/: config.py  faststream.py  logger.py  pipeline.py  util.py
backend/core/scripts/: pydantic_to_ts.py
backend/core/tests/: conftest.py  test_operator_spec_parameters.py  test_pipeline_graph.py  test_port_replication.py  test_runtime_parameters.py
backend/launcher/: .env  .env.example  Dockerfile  pyproject.toml  run.py
backend/launcher/interactem/launcher/: config.py  faststream_launcher.py  job_handler.py  launcher.py
backend/launcher/tests/: expected_script.sh  test_faststream_launcher.py  test_rendering.py
backend/metrics/: Dockerfile  README.md  pyproject.toml  run.py
backend/metrics/interactem/metrics/: config.py  metrics.py  prometheus_metrics.py
backend/metrics/metrics/: metrics.py
backend/metrics/monitoring-conf/: prometheus.yml
backend/micro/launcher/: .env  pyproject.toml
backend/micro/launcher/scripts/: test.sh
backend/micro/launcher/tests/: .env  expected_script.sh  test_rendering.py
backend/operators/: Dockerfile  pyproject.toml  startup.py
backend/operators/containerfiles/background-subtract/: Containerfile  run.py
backend/operators/containerfiles/data-replay/: run.py
backend/operators/containerfiles/detstream-aggregator/: run.py
backend/operators/containerfiles/detstream-assembler/: README.md  run.py
backend/operators/containerfiles/detstream-producer/: config.json
backend/operators/containerfiles/detstream-state-server/: Containerfile  config.json
backend/operators/containerfiles/electron-count/: Containerfile  run.py
backend/operators/containerfiles/electron-count-save/: Containerfile  run.py
backend/operators/containerfiles/error/: run.py
backend/operators/containerfiles/image-display/: Containerfile  run.py
backend/operators/containerfiles/image-generator/: Containerfile  run.py
backend/operators/containerfiles/image-receiver/: Containerfile  run.py
backend/operators/containerfiles/random-image/: Containerfile  run.py
backend/operators/containerfiles/sparse-frame-image-converter/: run.py
backend/operators/containerfiles/test/: Containerfile  operator0.py
backend/operators/interactem/operators/: config.py  examples.py  operator.py  zsocket.py
backend/operators/operators/: config.py  examples.py  operator.py  zsocket.py
backend/operators/operators/messengers/: base.py  zmq.py
backend/operators/thallium/: CMakeLists.txt  README.md  pyproject.toml
backend/operators/thallium/src/: .gitignore  CMakeLists.txt  QueueClient.hpp  QueueProvider.hpp  bindings.cpp  ndarray_info.hpp
backend/operators/thallium/tests/: test_basic.py  test_ownership.py
backend/orchestrator/: .env  .env.example  Dockerfile  pyproject.toml  run.py
backend/orchestrator/interactem/orchestrator/: app.py  assign.py  config.py  constants.py  exceptions.py  machine.py  orchestrator.py  (+2 more)
backend/orchestrator/orchestrator/: __init__.py  config.py  orchestrator.py  pull.py
backend/orchestrator/tests/: test_assignment.py  test_restart_operator.py
backend/rdma/: CMakeLists.txt  README.md
backend/rdma/common/: CMakeLists.txt
backend/rdma/include/: RdmaProxyService.hpp  op_receiver.hpp  op_sender.hpp  prx_transporter.hpp
backend/rdma/libs/: CMakeLists.txt
backend/rdma/src/: CMakeLists.txt  prx_transporter.cpp
backend/sfapi_models/: pyproject.toml
cli/: .env  .env.example  README.md  pyproject.toml
cli/interactem/cli/: agent.py  api.py  main.py  models.py  operators.py  pipeline.py  settings.py  templates.py
docs/: .gitignore  Makefile  README.md  pyproject.toml
docs/scripts/: sync_readmes.py
docs/source/: authoring-operators.md  conf.py  getting-started.md  index.rst  introduction.md  launch-agent.md
operators/detstream-aggregator/: Containerfile  operator.json  pyproject.toml  run.py
operators/distiller-pipeline/: pyproject.toml
operators/distiller-pipeline/distiller_pipeline/: __init__.py  accumulator.py  client.py  emitter.py  util.py
operators/distiller-pipeline/tests/: conftest.py  test_frame_accumulator.py  test_frame_emitter.py
operators/distiller-streaming/: .env.example  Containerfile  pyproject.toml
operators/distiller-streaming/distiller_streaming/: accumulator.py  client.py  com.py  emitter.py  models.py  util.py
operators/distiller-streaming/tests/: conftest.py  test_com.py  test_diffraction.py  test_frame_accumulator.py  test_frame_emitter.py
(+584 files in other folders)
