[project]
name = "interactem-cli"
version = "0.1.0"
description = "Command-line interface for InteractEM pipeline management"
authors = [{name = "Rajat Bhattarai", email = "basistharajat@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
interactem = "interactem.cli.main:app"

[tool.poetry]
packages = [{include = "interactem"}]

[tool.poetry.scripts]
interactem = "interactem.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
interactem-core = {path = "../backend/core", develop = true}
typer = "^0.19.2"
rich = "^13.7.1"
httpx = "^0.28.1"
jinja2 = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"