[project]
name = "interactem-cli"
version = "0.0.2"
description = "Command-line interface for InteractEM pipeline management"
authors = [{name = "Rajat Bhattarai", email = "basistharajat@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "interactem-core",
    "typer>=0.19.2,<1",
    "rich>=13.7.1,<14",
    "httpx>=0.28.1,<1",
    "jinja2>=3.1.0,<4",
]

[project.scripts]
interactem = "interactem.cli.main:app"

[tool.uv.sources]
interactem-core = { path = "../backend/core", editable = true }

[tool.poetry]
packages = [{include = "interactem"}]

[tool.poetry.scripts]
interactem = "interactem.cli.main:app"

[tool.poetry.dependencies]
interactem-core = {path = "../backend/core", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"