[project]
name = "interactem-docs"
version = "0.0.1"
description = "interactEM documentation"
authors = [{name = "interactEM developers"}]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.1.3"
sphinx-multiversion = "^0.2.4"
myst-parser = "^4.0.0"
sphinxcontrib-mermaid = "^1.0.0"
sphinx-design = "^0.6.1"
furo = "^2025.7.19"
sphinx-copybutton = "^0.5.2"
markdown-code-symlinks = { git = "https://github.com/SymbiFlow/sphinxcontrib-markdown-symlinks.git", rev = "4ead1c22270188cd0529741679769c56d9c341bf" }

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
