[project]
name = "interactem-docs"
version = "0.0.1"
description = "interactEM documentation"
authors = [{name = "interactEM developers"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.1.3,<9",
    "sphinx-multiversion>=0.2.4,<1",
    "myst-parser>=4.0.0,<5",
    "sphinxcontrib-mermaid>=1.0.0,<2",
    "sphinx-design>=0.6.1,<1",
    "furo>=2025.7.19,<2026",
    "sphinx-copybutton>=0.5.2,<1",
    "markdown-code-symlinks",
]

[tool.uv.sources]
markdown-code-symlinks = { git = "https://github.com/SymbiFlow/sphinxcontrib-markdown-symlinks.git", rev = "4ead1c22270188cd0529741679769c56d9c341bf" }

[dependency-groups]
dev = [
    "sphinx-autobuild>=2024.10.3,<2025",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
markdown-code-symlinks = { git = "https://github.com/SymbiFlow/sphinxcontrib-markdown-symlinks.git", rev = "4ead1c22270188cd0529741679769c56d9c341bf" }