[project]
name = "interactem-agent"
dynamic = [ "version", "dependencies"]
description = "Agent for interactem"
readme = "README.md"
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"

[project.scripts]
interactem-agent = "interactem.agent.entrypoint:entrypoint"

[tool.poetry]
version = "0.1.0"
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
python = "^3.10"
interactem-core = {path = "../core", develop = true}
podman = "^5.0.0"
pydantic-settings = "^2.4"
nkeys = "^0.2.1"
aiohttp = "^3.11.12"
netifaces2 = "^0.0.22"
stamina = "^25.1.0"
jinja2 = "^3.1.6"

[tool.poetry.group.hpc]
optional = true

[tool.poetry.group.hpc.dependencies]
podman-hpc = "^1.1.4"
podman-hpc-py = {path = "thirdparty/podman-hpc-py"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"
extend-exclude = ["thirdparty/"]
