[project]
name = "interactem-agent"
version = "0.0.1"
description = "Agent for interactem"
readme = "README.md"
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"
dependencies = [
    "interactem-core",
    "podman>=5.0.0,<6",
    "pydantic-settings>=2.4,<3",
    "nkeys>=0.2.1,<0.3",
    "aiohttp>=3.11.12,<4",
    "netifaces2>=0.0.22,<0.1",
    "stamina>=25.1.0,<26",
    "jinja2>=3.1.6,<4",
]

[project.optional-dependencies]
hpc = [
    "podman-hpc @ git+https://github.com/cjh1/podman-hpc.git@d01773a8ae14489af7654d799d9738a2c5629248",
    "podman-hpc-py @ git+https://github.com/cjh1/podman-hpc-py.git@577e467ab5bf10840df81234e477a3ebbd436f7e",
]


[project.scripts]
interactem-agent = "interactem.agent.entrypoint:entrypoint"

[tool.uv.sources]
interactem-core = { path = "../core", editable = true }


[tool.poetry]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
interactem-core = {path = "../core", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"
extend-exclude = ["thirdparty/"]
