[tool.poetry]
name = "interactem-app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras= ["standard"], version = "^0.115"}
python-multipart = "^0.0.18"
email-validator = "^2.1.0.post1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^9.0"
pydantic = ">2.0"

jinja2 = "^3.1"
alembic = "^1.12.1"
httpx = "^0.25.1"
psycopg = {extras = ["binary"], version = "^3.1.13"}
sqlmodel = "^0.0.21"
# Pin bcrypt until passlib supports the latest
bcrypt = "4.0.1"
pydantic-settings = "^2.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.8.0"}
pyjwt = "^2.8.0"
interactem-core = {path = "../core", develop = true}
interactem-sfapi-models = {path = "../sfapi_models", develop = true}
aiohttp = "^3.10.5"
jsonpath-ng = "^1.7.0"
starlette = "^0.40.0"
h11 = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"
ruff = "^0.2.2"
pre-commit = "^3.6.2"
types-passlib = "^1.7.7.20240106"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]
extend = "../../.ruff.toml"