[project]
name = "interactem-core"
dynamic = ["version", "dependencies"]
description = ""
readme = "README.md"
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"

[tool.poetry]
version = "0.1.0"
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9"
coloredlogs = "^15.0.1"
networkx = "^3.3"
# Use draft version of nats-py because it helps with connection issues
# See https://github.com/nats-io/nats.py/pull/675
nats-py = {git = "https://github.com/swelborn/nats.py.git", rev = "fce1f3a4a917c2bb0f4adaf1698fe2fa7a13a971"}
nkeys = "^0.2.1"
tenacity = "^9.0.0"
pydantic-settings = "^2.10.1"
faststream = {version="^0.5.48", extras=["nats"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pydantic-to-typescript = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"
extend-exclude = ["_export.py"]