[project]
name = "interactem-core"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.3,<3",
    "networkx>=3.3,<3.5",
    "nats-py>=2.11.0,<3",
    "nkeys>=0.2.1,<0.3",
    "tenacity>=9.0.0,<10",
    "pydantic-settings>=2.10.1,<3",
    "faststream[nats] @ git+https://github.com/fil1n/faststream.git@8c14951daec416f22469deaed805ff5db27e3b44",
    "anyio>=4.11.0,<5",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "pydantic-to-typescript>=2.0.0,<3",
]

[tool.poetry]
packages = [{ include = "interactem" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"
extend-exclude = ["_export.py"]
