[project]
name = "launcher"
description = ""
dynamic = ["version", "dependencies"]
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"
readme = "README.md"

[tool.poetry]
packages = [{ include = "interactem" }]
version = "0.1.0"

[tool.poetry.dependencies]
interactem-core = {path = "../../core", develop = true}
interactem-sfapi-models = {path = "../../sfapi_models", develop = true}
python = "^3.10"
pydantic-settings = "^2.4.0"
sfapi-client = "^0.3.2"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
python-dotenv = { version = "^1.0.1", extras = ["cli"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend = "../../../.ruff.toml"

isort = { known-first-party = ["interactem"] }

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
target-version = "py310"
