[project]
name = "launcher"
description = ""
dynamic = ["version", "dependencies"]
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"
readme = "README.md"

[tool.poetry]
packages = [{ include = "interactem" }]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
interactem-core = {path = "../core", develop = true}
interactem-sfapi-models = {path = "../sfapi_models", develop = true}
pydantic-settings = "^2.4.0"
sfapi-client = "^0.4"
h11 = "^0.16.0"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
python-dotenv = { version = "^1.0.1", extras = ["cli"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"