[project]
name = "interactem-launcher"
version = "0.0.2"
description = ""
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "interactem-core",
    "interactem-sfapi-models",
    "pydantic-settings>=2.4.0,<3",
    "sfapi-client>=0.4,<1",
    "h11>=0.16.0,<1",
    "jinja2>=3.1,<4",
]

[tool.uv.sources]
interactem-core = { path = "../core", editable = true }
interactem-sfapi-models = { path = "../sfapi_models", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10",
    "pytest-asyncio>=1.0.0,<2",
    "python-dotenv[cli]>=1.0.1,<2",
]

[tool.poetry]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
interactem-core = {path = "../core", develop = true}
interactem-sfapi-models = {path = "../sfapi_models", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"