[project]
name = "interactem-metrics"
version = "0.1.0"
description = ""
authors = [{name = "Sam Welborn", email = "swelborn@lbl.gov"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
python = "^3.10"
interactem-core = {path = "../core", develop = true}
prometheus-client = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"