[tool.poetry]
name = "operators"
version = "0.1.0"
description = ""
authors = ["Sam Welborn <swelborn@lbl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nats-py = "^2.8.0"
pydantic = "^2.8.2"
core = {path = "../core", develop = true}
pyzmq = "^26.1.0"
networkx = "^3.3"
numpy = "^1.26"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
exclude = ["**/__init__.py", "thirdparty/**", "conftest.py"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
