[project]
name = "interactem-operators"
version = "0.1.0"
description = ""
authors = [{name = "Sam Welborn", email = "swelborn@lbl.gov"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
python = "^3.10"
interactem-core = {path = "../core", develop = true}
pyzmq = "^26.1.0"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"