[project]
name = "interactem-operators"
version = "0.0.2"
description = ""
authors = [{name = "Sam Welborn", email = "swelborn@lbl.gov"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "interactem-core",
    "pyzmq>=27.1.0,<28",
    "aiohttp>=3.10.5,<4",
]

[tool.uv.sources]
interactem-core = { path = "../core", editable = true }

[tool.poetry]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
interactem-core = {path = "../core", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"