[tool.poetry]
name = "interactem-orchestrator"
version = "0.1.0"
description = ""
authors = ["Sam Welborn <swelborn@lbl.gov>"]
readme = "README.md"
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
interactem-core = {path = "../core", develop = true}
pydantic-settings = "^2.4"
aiohttp = "^3.10.5"
transitions = "^0.9.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"