[project]
name = "interactem-orchestrator"
version = "0.0.2"
description = ""
authors = [{name = "Sam Welborn", email = "swelborn@lbl.gov"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4,<3",
    "interactem-core",
    "pydantic-settings>=2.4,<3",
    "aiohttp>=3.10.5,<4",
    "transitions>=0.9.3,<1",
]

[tool.uv.sources]
interactem-core = { path = "../core", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10",
    "pytest-mock>=3.14.0,<4",
]

[tool.poetry]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
interactem-core = {path = "../core", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"