[project]
name = "interactem-sfapi-models"
version = "0.1.0"
description = ""
dynamic = ["dependencies"]
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"
readme = "README.md"

[tool.poetry]
packages = [{ include = "interactem" }]

[tool.poetry.dependencies]
python = "^3.10"
sfapi-client = "^0.4"
pydantic = "^2.12.3"
h11 = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"