[project]
name = "interactem-sfapi-models"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
    {name = "Chris Harris", email = "cjh@lbl.gov"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "sfapi-client>=0.4,<1",
    "pydantic>=2.12.3,<3",
    "h11>=0.16.0,<1",
]

[tool.poetry]
packages = [{ include = "interactem" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
extend = "../../.ruff.toml"