[project]
name = "detstream"
version = "0.1.0"
description = "detstream python processes"
authors = [
    {name = "Sam Welborn", email = "swelborn@lbl.gov"},
]
dependencies = [
    "pyzmq>=26.2.0",
    "msgpack>=1.1.0",
    "core @ file:///${PROJECT_ROOT}/core/",
    "operators @ file:///${PROJECT_ROOT}/operators/",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
